kubernetes/phabricator.yaml
#kind: PersistentVolumeClaim
#apiVersion: v1
#metadata:
#  name: phabricator
#  namespace: aitech
#spec:
#  storageClassName: cephfs
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 5Gi
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  phabricator
  namespace: aitech
  labels:
    app: phabricator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phabricator
  template:
    metadata:
      labels:
        app: phabricator
    spec:
      containers:
      - image:  redpointgames/phabricator
        name: phabricator
        ports:
        - containerPort:  80
          name:  http
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 20; cp /local_configs/local.json /srv/phabricator/phabricator/conf/local/local.json"]
        volumeMounts:
        - mountPath: /repos
          name: data
        - name: config
          mountPath: /local_configs/local.json 
          subPath: local.json

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: phabricator
      - name: config
        configMap:
          name: phabricator
---

kind: Service
apiVersion: v1
metadata:
  name:  phabricator
  namespace: aitech
spec:
  selector:
   app: phabricator
  ports:
  - name:  http
    port:  80
    targetPort:  80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phabricator
  namespace: aitech
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: phabricator.aitech.192.168.12.187.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: phabricator
          servicePort: 80
